--- a/satysfi-colorbox-doc.opam
+++ b/satysfi-colorbox-doc.opam
@@ -12,6 +12,7 @@ bug-reports: "https://github.com/abenori/satysfi-colorbox/issues"
 depends: [
   "satysfi" { >= "0.0.6" & < "1.0.0" }
   "satyrographos" { >= "0.0.2.6" & < "0.0.3" }
+  "satysfi-enumitem" {>= "3.0.0" & < "3.1.0" }
 
   # You may want to include the corresponding library
   "satysfi-colorbox" {= "%{version}%"}
